--- a/packages/jet/jupyter_clickable_image_widget/Dockerfile
+++ b/packages/jet/jupyter_clickable_image_widget/Dockerfile
@@ -1,7 +1,7 @@
 #---
 # name: jupyter_clickable_image_widget
 # group: jet
-# depends: [jupyterlab_v2]
+# depends: [jupyterlab]
 # notes: https://github.com/jaybdub/jupyter_clickable_image_widget
 #---
 ARG BASE_IMAGE
@@ -10,14 +10,11 @@ FROM ${BASE_IMAGE}
 # Reference:
 # https://github.com/NVIDIA-AI-IOT/jetbot/blob/master/docker/base/Dockerfile
 
-# # Uninstall JupyterLab for now
-# RUN echo -e "\e[48;5;172m Uninstall JupyterLab for now \e[0m"
-# RUN python3 -m pip uninstall -y jupyter jupyter_core jupyter-client jupyter-console jupyterlab_pygments qtconsole notebook nbconvert nbformat nbclassic nbclient jupyterlab-widgets jupyter-events jupyter-server jupyter-server-terminals 
-
 
 # Install traitlets (master, to support the unlink() method)
 RUN echo -e "\e[48;5;172m Install traitlets \e[0m"
 RUN python3 -m pip install git+https://github.com/ipython/traitlets@main
+
 # Install dependencies for jupyter_clickable_image_widget
 RUN echo "\e[42m Install dependencies \e[0m"
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - 
@@ -27,13 +24,7 @@ RUN apt-get update && \
             nodejs && \
     rm -rf /var/lib/apt/lists/* && \
     apt-get clean
-
-# # Install JupyterLab 2.2.6
-# RUN echo -e "\e[48;5;172m Install JupyterLab 2.2.6 \e[0m"
-# RUN pip3 install jupyter jupyterlab==2.2.6
 RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
-
-WORKDIR /
 
 # Install jupyter_clickable_image_widget
 RUN echo "\e[42m Install jupyter_clickable_image_widget \e[0m"
