Copy L4T README files for convenience

--- a/packages/rag/llama-index/Dockerfile
+++ b/packages/rag/llama-index/Dockerfile
@@ -14,7 +14,9 @@ RUN pip3 install --no-cache-dir --verbose \
         llama-index-llms-ollama \
         llama-index-embeddings-huggingface
 
-COPY samples/* /opt/llama-index/
+COPY samples/*.py /opt/llama-index/
+COPY samples/*.ipynb /opt/llama-index/
+COPY samples/L4T-README /opt/llama-index/L4T-README
 
 CMD /start_ollama && \
     JUPYTER_ROOT=/opt/llama-index /start_jupyter && \
