--- a/packages/hardware/oled/Dockerfile
+++ b/packages/hardware/oled/Dockerfile
@@ -5,7 +5,7 @@
 # notes: https://github.com/NVIDIA-AI-IOT/jetcard/
 #---
 ARG BASE_IMAGE
-FROM ubuntu:22.04
+FROM ${BASE_IMAGE}
 
 # Avoid warnings by switching to noninteractive
 ARG DEBIAN_FRONTEND=noninteractive
@@ -23,15 +23,15 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
-RUN pip3 install pillow flask Adafruit_SSD1306 smbus2
+RUN pip3 install --ignore-installed pillow flask Adafruit_SSD1306 smbus2
 
 ### TODO: 232 MB of disk space should be freed, but not on the resulting container image
-RUN apt-get purge -y \
-		  build-essential \
-		  python3-dev && \
-    apt-get -y autoremove && \
-    rm -rf /var/lib/apt/lists/* && \
-    apt-get clean -y 
+# RUN apt-get purge -y \
+# 		  build-essential \
+# 		  python3-dev && \
+#     apt-get -y autoremove && \
+#     rm -rf /var/lib/apt/lists/* && \
+#     apt-get clean -y 
 
 WORKDIR /opt
 
