--- a/packages/cuda/cudnn/Dockerfile
+++ b/packages/cuda/cudnn/Dockerfile
@@ -12,6 +12,14 @@ ARG CUDNN_URL
 ARG CUDNN_DEB
 ARG CUDNN_PACKAGES
 
+RUN echo $CUDNN_PACKAGES
+
+# First, remove any existing cuDNN packages to avoid conflicts
+RUN apt-get update && \
+    apt-get remove -y --purge libcudnn* && \
+    rm -rf /var/lib/apt/lists/* && \
+    apt-get clean
+
 RUN ls /etc/apt/sources.list.d/ && \
     apt-get update && \
     apt-cache search cudnn
@@ -31,5 +39,5 @@ RUN echo "Downloading ${CUDNN_DEB}" && \
     dpkg -P ${CUDNN_DEB} && \
     rm -rf /tmp/cudnn
 
-RUN cd /usr/src/cudnn_samples_v*/conv_sample/ && \
-    make -j$(nproc)
+    RUN cd /usr/src/cudnn_samples_v*/conv_sample/ && \
+        make -j$(nproc)
