Enable installing from Jetson PyPI

--- a/packages/pytorch/Dockerfile
+++ b/packages/pytorch/Dockerfile
@@ -33,37 +33,39 @@ ENV TORCH_CUDA_ARCH_LIST=${TORCH_CUDA_ARCH_LIST} \
 
 
 # attempt to install from pip, and fall back to building it
-#COPY install.sh build.sh build_clone_repo.sh /tmp/pytorch/
-#RUN /tmp/pytorch/install.sh || bash -c "/tmp/pytorch/build_clone_repo.sh && /tmp/pytorch/build.sh"
+COPY install.sh build.sh build_clone_repo.sh /tmp/pytorch/
+RUN /tmp/pytorch/install.sh || bash -c "/tmp/pytorch/build_clone_repo.sh && /tmp/pytorch/build.sh"
 
-### Skip trying to install for now, as we know we don't have pre-built wheel yet.
-COPY build_clone_repo.sh /tmp/pytorch/
-RUN /tmp/pytorch/build_clone_repo.sh
+###
+### Below is to be used when building and testing a new PyTorch wheel.
+###
+# COPY build_clone_repo.sh /tmp/pytorch/
+# RUN /tmp/pytorch/build_clone_repo.sh
 
-# 1. Install GCC-11 and G++-11
-RUN apt-get update && \
-    apt-get install -y gcc-11 g++-11
+# # 1. Install GCC-11 and G++-11
+# RUN apt-get update && \
+#     apt-get install -y gcc-11 g++-11
 
-# 1b. Install OpenBLAS
-RUN apt-get update && \
-    apt-get install -y libopenblas-dev liblapack-dev
+# # 1b. Install OpenBLAS
+# RUN apt-get update && \
+#     apt-get install -y libopenblas-dev liblapack-dev
 
-# 2. Set environment variables so all subsequent RUN commands use GCC-11
-ENV CC=gcc-11
-ENV CXX=g++-11
-COPY build.sh /tmp/pytorch/
-RUN /tmp/pytorch/build.sh
-RUN ls -lh /opt/torch*.whl
+# # 2. Set environment variables so all subsequent RUN commands use GCC-11
+# ENV CC=gcc-11
+# ENV CXX=g++-11
+# COPY build.sh /tmp/pytorch/
+# RUN /tmp/pytorch/build.sh
+# RUN ls -lh /opt/torch*.whl
 
-# 3. Install pip and setuptools
-RUN apt-get update && \
-    apt-get install -y python3-pip python3-setuptools
+# # 3. Install pip and setuptools
+# RUN apt-get update && \
+#     apt-get install -y python3-pip python3-setuptools
 
-# 4. Install PyTorch dependencies
-RUN pip3 install setuptools wheel
+# # 4. Install PyTorch dependencies
+# RUN pip3 install setuptools wheel
 
-# 5. Install PyTorch
-RUN pip3 install /opt/torch*.whl
+# # 5. Install PyTorch
+# RUN pip3 install /opt/torch*.whl
 
-# 6. Verify PyTorch installation
-# RUN python3 -c 'import torch; print(f"PyTorch version: {torch.__version__}"); print(f"CUDA available:  {torch.cuda.is_available()}"); print(f"cuDNN version:   {torch.backends.cudnn.version()}"); print(torch.__config__.show());'
+# # 6. Verify PyTorch installation
+# # RUN python3 -c 'import torch; print(f"PyTorch version: {torch.__version__}"); print(f"CUDA available:  {torch.cuda.is_available()}"); print(f"cuDNN version:   {torch.backends.cudnn.version()}"); print(torch.__config__.show());'
