--- a/packages/cuda/cuda/Dockerfile.samples
+++ b/packages/cuda/cuda/Dockerfile.samples
@@ -25,4 +25,5 @@ RUN /tmp/cuda/install-samples.sh
 
 
 RUN git clone https://github.com/nvidia/nvbandwidth /opt/nvbandwidth
+RUN apt update && apt install -y libboost-program-options-dev
 RUN cd /opt/nvbandwidth && ./debian_install.sh
