Extend cuda_package() function to take local SCP path

--- a/packages/cuda/cuda/Dockerfile
+++ b/packages/cuda/cuda/Dockerfile
@@ -13,8 +13,12 @@ ARG CUDA_URL \
     CUDA_PACKAGES \
     CUDA_ARCH_LIST \
     IS_SBSA \
-    DISTRO="ubuntu2004"
-    
+    DISTRO="ubuntu2004" \
+    USE_LOCAL_DEB \
+    CUDA_LOCAL_DEB \
+    USE_SCP_DOWNLOAD \
+    CUDA_SCP_PATH
+
 COPY install.sh /tmp/cuda/install.sh
 RUN /tmp/cuda/install.sh
 
@@ -37,5 +41,5 @@ ENV NVIDIA_VISIBLE_DEVICES=all \
     PATH="$CUDA_HOME/bin:${PATH}" \
     LD_LIBRARY_PATH="${CUDA_HOME}/compat:${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" \
     DEBIAN_FRONTEND=noninteractive
-    
+
 WORKDIR /
