fix: resolve TVM tvm_ffi module import error
- Add missing CMake options (USE_PYTHON, USE_FFI, USE_GRAPH_EXECUTOR) for proper Python bindings
- Add essential build dependencies (build-essential, cmake, ninja-build, libtinfo-dev, etc.)
- Fix library path configuration with proper environment variables (TVM_LIBRARY_PATH, TVM_BUILD_PATH, LD_LIBRARY_PATH)
- Create proper directory structure (/opt/tvm/python/tvm/_ffi/) and copy compiled libraries to correct locations
- Update TVM commit to stable version b67650f1020e9e4bd3d69052867611c08f951470
- Add import test to verify tvm_ffi module is properly linked

Fixes: ModuleNotFoundError: No module named 'tvm_ffi'

--- a/packages/ml/tvm/Dockerfile
+++ b/packages/ml/tvm/Dockerfile
@@ -24,6 +24,14 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
 		llvm-18 \
 		llvm-18-dev \
+		build-essential \
+		cmake \
+		ninja-build \
+		libtinfo-dev \
+		zlib1g-dev \
+		libedit-dev \
+		libxml2-dev \
+		pkg-config \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 # copy installation and build scripts for TVM
